make footer stick to bottom of page and add value of clear

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,10 @@ img {
 }
 
 footer {
+    margin-top: 10px;
+    height: 100px;
     position: sticky;
+    clear:both;
 }
 
 hr {
@@ -320,11 +323,6 @@ iframe {
 
 /* social media links styling */
 
-footer {
-    height: 150px;
-    position: sticky;
-}
-
 .social-media {
     text-align: center;  
 }
@@ -429,11 +427,6 @@ footer {
         border-bottom: 10px;
     }
 
-    footer {
-        height: 150px;
-        position: sticky;
-    }
-
     /* media query for screens 820px or larger */
 
     @media screen and (max-width:820px){
@@ -454,6 +447,8 @@ footer {
 
     /* media query for screens 768px or larger */
     @media screen and (max-width:768px) {
+
+    /* stylind iframes on smaller devices*/    
     iframe {
         clear: both;
         padding: 14px;
@@ -543,12 +538,6 @@ footer {
         clear: both;
         padding: 0;
     }
-
-    footer {
-        height: 150px;
-        position: fixed;
-    }
-    
 }
 
 /* For small screens 599px or smaller */
@@ -619,12 +608,6 @@ footer {
         padding: 0;
         margin-bottom: 5px;
     }
-
-    /* styling the footer */
-    footer {
-        height: 150px;
-        position: sticky;
-    }
 }
 
 /* media query for screens 320px and larger */
@@ -641,8 +624,9 @@ footer {
         color: #9C89B3;
         letter-spacing: 3px;
         text-decoration: none;
-        float: left; 
-    }
+        float: left;
+       }
+
         /* styling the navigation menu */
         .navigation-menu {
             display: block;
@@ -652,4 +636,4 @@ footer {
             padding: 0;
             width: 100%;
         }
-}
+    }
