edit submit and clear inputs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,10 +90,10 @@ hr {
 /* form styling */
 
 .check-in-page {
-    height: 700px;
+    height: 900px;
     clear: both;
     color: rgb(2,0,36);
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
     background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
     border-radius: 7px;
@@ -132,22 +132,24 @@ textarea {
     border-radius: 7px;
 }
 
-.submit-button {
-    float: left;
-    background-color: #F04FC0;
+.diary-submit-button {
+    clear: both;
+    display: inline;
+    background-color: rgba(214, 93, 176, 0.7);
     color: #D8BFD8;
-    margin: 20px 20px 10px 45px;
+    margin: 10px auto;
     padding: 15px 0 20px 0;
     border-radius: 5px;
     font-size: inherit;
     text-align: center;
 }
 
-.reset-button {
-    float: right;
-    background-color: #F04FC0;
+.clear-submit-button {
+    clear: both;
+    display: inline;
+    background-color: rgba(214, 93, 176, 0.7);
     color: #D8BFD8;
-    margin: 20px 20px 10px 45px;
+    margin: 10px auto;
     padding: 15px 0 20px 0;
     border-radius: 5px;
     font-size: inherit;
@@ -155,8 +157,8 @@ textarea {
 }
 
 
-.submit-button:hover {
-    float: left;
+.diary-submit-button:hover {
+    
     background-color: #D8BFD8;
     color: #F04FC0;
     margin: 20px 20px 10px 45px;
@@ -166,15 +168,15 @@ textarea {
     text-align: center;
 }
 
-.reset-button:hover {
-    float: right;
-    background-color: ;#D8BFD8
+.clear-submit-button:hover {
+    
+    background-color: #D8BFD8;
     color: #F04FC0;
     margin: 20px 20px 10px 45px;
     padding: 15px 0 20px 0;
     border-radius: 5px;
-    font-size: inherit;
-    text-align: center;
+    
+    
 }
  
 .active {
@@ -377,6 +379,16 @@ iframe {
         margin: 0 auto;
         clear: both;
 }
+
+    /* styling the check-in page and journal section */
+    .check-in-page {
+        height: 800px;
+        color: rgb(2,0,36);
+        width: 80%;
+        margin: 0 auto;
+        background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
+        border-radius: 7px;
+    }
 }
 
 /* media query for screens at 992px or larger */
@@ -398,17 +410,16 @@ iframe {
         background-position: 10% 40%;
     }
 
-    /* styling the check-in page and journal section */
-    .check-in-page {
-        height: 800px;
-        clear: both;
-        color: rgb(2,0,36);
-        width: 70%;
-        margin: 0 auto;
-        background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
-        border-radius: 7px;
-    }
-    
+        /* styling the check-in page and journal section */
+        .check-in-page {
+            height: 700px;
+            color: rgb(2,0,36);
+            width: 70%;
+            margin: 0 auto;
+            background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
+            border-radius: 7px;
+        }
+
     input, label {
         margin: 0 auto;
         padding: 5px 2px;
@@ -425,6 +436,20 @@ iframe {
         width: 20%;
         height: 30%;
         border-bottom: 10px;
+    }
+
+    .diary-submit-button {
+        
+        display: block;
+        margin: 0 auto;
+        padding: 15px 0;
+    }
+
+    .clear-submit-button {
+        
+        display: block;
+        margin: 0 auto;
+        padding: 15px 0;
     }
 
     /* media query for screens 820px or larger */
@@ -448,7 +473,7 @@ iframe {
     /* media query for screens 768px or larger */
     @media screen and (max-width:768px) {
 
-    /* stylind iframes on smaller devices*/    
+    /* styling iframes on smaller devices*/    
     iframe {
         clear: both;
         padding: 14px;
