styled form for further responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ hr {
     height: 900px;
     clear: both;
     color: rgb(2,0,36);
-    width: 100%;
+    width: 70%;
     margin: 0 auto;
     background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
     border-radius: 7px;
@@ -101,23 +101,24 @@ hr {
 
 label {
     margin: 0 auto;
+    margin-bottom: 10px;
     padding: 15px 5px;
     display: block;
-    width: 40%;
+    width: 20%;
     height: 15px;
     text-align: center;
 
 }
 
 input {
+    
     background: transparent;
     border: 1px solid #3a3a3a;
     border-radius: 7px;
     margin: 0 auto;
-    padding: 10px 5px;
+    padding: 5px 5px;
     display: block;
-    width: 40%;
-    height: 15px;
+    width: 20%;
     text-align: center;
 }
 
@@ -133,50 +134,48 @@ textarea {
 }
 
 .diary-submit-button {
-    clear: both;
     display: inline;
     background-color: rgba(214, 93, 176, 0.7);
-    color: #D8BFD8;
-    margin: 10px auto;
+    color: white;
+    margin-left: 25%;
+    margin-top: 10px;
     padding: 15px 0 20px 0;
     border-radius: 5px;
     font-size: inherit;
-    text-align: center;
 }
 
 .clear-submit-button {
-    clear: both;
     display: inline;
     background-color: rgba(214, 93, 176, 0.7);
-    color: #D8BFD8;
-    margin: 10px auto;
+    color: white;
+    margin-left: 100px;
+    margin-top: 10px;
     padding: 15px 0 20px 0;
     border-radius: 5px;
     font-size: inherit;
-    text-align: center;
+    
 }
 
 
 .diary-submit-button:hover {
-    
+    display: inline;
     background-color: #D8BFD8;
     color: #F04FC0;
-    margin: 20px 20px 10px 45px;
+    margin-left: 25%;
+    margin-top: 10px;
     padding: 15px 0 20px 0;
     border-radius: 5px;
     font-size: inherit;
-    text-align: center;
 }
 
 .clear-submit-button:hover {
-    
     background-color: #D8BFD8;
     color: #F04FC0;
-    margin: 20px 20px 10px 45px;
+    margin-left: 100px;
+    margin-top: 10px;
     padding: 15px 0 20px 0;
     border-radius: 5px;
-    
-    
+    font-size: inherit;
 }
  
 .active {
@@ -412,7 +411,7 @@ iframe {
 
         /* styling the check-in page and journal section */
         .check-in-page {
-            height: 700px;
+            height: 800px;
             color: rgb(2,0,36);
             width: 70%;
             margin: 0 auto;
@@ -420,38 +419,32 @@ iframe {
             border-radius: 7px;
         }
 
-    input, label {
-        margin: 0 auto;
-        padding: 5px 2px;
-        display: block;
-        width: 40%;
-        height: 15px;
-        text-align: center;
-    }
-    
-    textarea {
-        display: block;
-        margin: 0 auto;
-        padding: 2px 2px;
-        width: 20%;
-        height: 30%;
-        border-bottom: 10px;
-    }
-
     .diary-submit-button {
         
         display: block;
         margin: 0 auto;
-        padding: 15px 0;
+        padding: 5px 0;
     }
 
     .clear-submit-button {
         
         display: block;
         margin: 0 auto;
-        padding: 15px 0;
+        padding: 5px 0;
     }
 
+    .diary-submit-button:hover {
+        display: block;
+        margin: 0 auto;
+        padding: 5px 0;
+    }
+    
+    .clear-submit-button:hover {
+        display: block;
+        margin: 0 auto;
+        padding: 5px 0;  
+    }
+    
     /* media query for screens 820px or larger */
 
     @media screen and (max-width:820px){
@@ -563,6 +556,26 @@ iframe {
         clear: both;
         padding: 0;
     }
+
+    .check-in-page {
+        height: 850px;
+        color: rgb(2,0,36);
+        width: 60%;
+        margin: 0 auto;
+        background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
+        border-radius: 7px;
+    }
+
+    label {
+        margin: 0 auto;
+        margin-bottom: 20px;
+        padding: 15px 5px;
+        display: block;
+        width: 70%;
+        height: 15px;
+        text-align: center;
+    
+    }
 }
 
 /* For small screens 599px or smaller */
@@ -632,6 +645,34 @@ iframe {
         clear:both;
         padding: 0;
         margin-bottom: 5px;
+    }
+
+    .diary-submit-button {
+        display: block;
+        margin: 0 auto;
+        width: 80%;
+        padding: 2px 10px;
+    }
+    
+    .clear-submit-button {
+        display: block;
+        margin: 0 auto;
+        width: 80%;
+        padding: 2px 10px;
+    }
+    
+    .diary-submit-button:hover {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        padding: 2px 10px;
+    }
+    
+    .clear-submit-button:hover {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        padding: 2px 10px; 
     }
 }
 
