--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@300&display=swap');
 
-* {
+* { 
     margin: 0;
     padding: 0;
     border: none;
 }
 
 body { 
-    background-image: url('assets/images/hero-image.jpeg');
     background-color: rgba(188, 164, 215, 0.5);
 }
 
@@ -65,13 +64,20 @@ img {
     height: 300px;
     width: 20%;
     padding: 15px;
-    display: inline;    
+    margin-left: 90px;
+    margin-right: 20px;
+    display: inline;   
 }
+/*
+.benefits {
+    width: 33%;
+    margin: 0 auto;
+    text-align: center;
+}
+*/
 
 #home-photos {
     width: 100%;
-    margin: 5px 15%;
-    
 }
 
 footer {
@@ -79,12 +85,6 @@ footer {
     height: 100px;
     position: sticky;
     clear:both;
-}
-
-hr {
-    border-bottom: 1px solid #3a3a3a;
-    width: 60px;
-    margin-left: 20px;
 }
 
 /* form styling */
@@ -193,7 +193,7 @@ textarea {
 }
 
 #main-page-response {
-    height: 1000px;
+    height: 1650px;
     width: 100%;
 }
 
@@ -278,6 +278,7 @@ iframe {
     margin-top: 10px;
     height: 400px;
     width: 100%;
+    position: center cover no-repeat;
     display: inline-block;
 }
 
@@ -377,7 +378,15 @@ iframe {
         width: 80%;
         margin: 0 auto;
         clear: both;
-}
+    }
+
+    img {
+            height: 300px;
+            width: 30%;
+            margin: 0 auto;
+            display: block;
+            clear: both; 
+        } 
 
     /* styling the check-in page and journal section */
     .check-in-page {
@@ -420,14 +429,12 @@ iframe {
         }
 
     .diary-submit-button {
-        
         display: block;
         margin: 0 auto;
         padding: 5px 0;
     }
 
-    .clear-submit-button {
-        
+    .clear-submit-button {   
         display: block;
         margin: 0 auto;
         padding: 5px 0;
@@ -448,17 +455,10 @@ iframe {
     /* media query for screens 820px or larger */
 
     @media screen and (max-width:820px){
-        img {
-            height: 300px;
-            width: 30%;
-            margin-left: 150px;
-            display: block;
-            clear: both; 
-        }
 
         /* styling the container for the index.html sections */
         #main-page-response {
-            height: 1650px;
+            height: 1800px;
             width: 100%;
         }
     }
@@ -475,7 +475,7 @@ iframe {
     /* styling the container for the index.html sections */
     #main-page-response {
         width:100%;
-        height: 768px;
+        height: 2000px;
         margin: 0 auto;
 
     }
@@ -596,7 +596,8 @@ iframe {
     /* restyling the logo */ 
     #logo {
         font-size: 300%;
-        left: 0;
+        margin: 0;
+        padding: 0;
         height: 75px;
         color: #9C89B3;
         letter-spacing: 3px;
@@ -605,14 +606,21 @@ iframe {
     }
         /* styling the navigation menu */
         .navigation-menu {
-            font-size: 70%;
+            float: left;
+            display: block;
+            width: 100%;
+            
+        }
+
+        .navigation-menu a {
+            font-size: 120%;
+            
         }
 
     /* styling the container for the index.html sections*/
     #main-page-response {
         width: 100%;
-        height: 599px;
-        margin: 0 auto;
+        height: 1200px;
     }
 
     /* styling heading and paragraph sections */
@@ -627,12 +635,14 @@ iframe {
     
     .float-left h2, .float-right h2 {
         width: 90%;
-        text-align: center;
+        margin-left: 20px;
+        
     }
 
     .float-left p, .float-right p  {
         width: 90%;
         text-align: center;
+        margin: 0 auto;
     }
 
     .float-center {
@@ -647,14 +657,13 @@ iframe {
     img {
         height: 150px;
         width: 20%;
-        padding: 1px;
-        margin-left: 0;
+        margin-left: 30px;
         display: inline;
     }
 
     /* styling iframe tutorials */ 
     iframe {
-        clear:both;
+        clear: both;
         padding: 0;
         margin-bottom: 5px;
     }
@@ -688,30 +697,21 @@ iframe {
     }
 }
 
-/* media query for screen sizes 515px or smaller */
-@media screen and (max-width: 515px) {
-    .navigation-menu a {
-        display: block;
-        clear: both;
-        font-size: 10px;
-        margin-left: 10px;
-        padding: 0;
-        width: 100%;
-    }
-    
-}
-
 /* media query for screens 320px and larger */
 
 @media screen and (max-width: 375px) {
     #logo {  
-        font-size: 150%;
+        font-size: 300%;
         left: 0;
         height: 75px;
         color: #9C89B3;
         letter-spacing: 3px;
         text-decoration: none;
         float: left;
+    }
+
+    nav {
+        font-size: 100%;
     }
 }
 }
