--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -713,5 +713,17 @@ iframe {
     nav {
         font-size: 100%;
     }
+
+    #main-page-response {
+        height: 1800px;
+        width:100%;
+    }
+
+    img {
+        display: block;
+        width: 70%;
+        height: 200px;
+        margin:0 auto;
+    }
 }
 }
