--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@300&display=swap');
 
-* { 
-    background: #000 !important;
-    color: #0f0 !important;
-    outline: solid #f00 1px !important;
-}
-    /*margin: 0;
+* {
+    margin: 0;
     padding: 0;
     border: none;
-    */
+}
+
 body { 
     background-color: rgba(188, 164, 215, 0.5);
 }
@@ -287,11 +284,11 @@ iframe {
 .navigation-menu li {
     float: right;
     list-style-type: none;
-    margin-right: 10px;
 }
 
 .navigation-menu a{
-    font-size: 120%;
+    width: 100%;
+    font-size: 190%;
     text-decoration: none;
     font-family: Roboto, sans-serif;
     color: #3a3a3a;
@@ -604,11 +601,12 @@ iframe {
         float: left; 
     }
         /* styling the navigation menu */
-        .navigation-menu li {
-            display: block;
-            padding: 0;
+        .navigation-menu a {
+            display: inline;
+            padding: 7px;
+            left: 0;
             width: 90%;
-            font-size: 70%;
+            font-size: 170%;
             
         }
 
@@ -697,7 +695,7 @@ iframe {
 @media screen and (max-width: 320px) {
     
     .navigation-menu a {
-        font-size: 120%;
+        font-size: 100%;
         margin: 0;
         padding: 0;
     }
