adding to navigation layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,7 +591,7 @@ iframe {
 @media screen and (max-width: 599px) {
     /* restyling the logo */ 
     #logo {
-        font-size: 400%;
+        font-size: 350%;
         margin: 0;
         padding: 0;
         height: 75px;
@@ -605,8 +605,8 @@ iframe {
             display: inline;
             padding: 7px;
             left: 0;
-            width: 90%;
-            font-size: 170%;
+            width: 100%;
+            font-size: 95%;
             
         }
 
@@ -702,14 +702,15 @@ iframe {
     }
     
     #main-page-response {
-        height: 2000px;
+        height: 1600px;
         width:100%;
     }
 
     img {
+        margin: 0 auto;
         display: block;
-        width: 90%;
-        height: 200px;
+        width: 40%;
+        height: 150px;
     }
 }
 }
