--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,20 +20,21 @@ h1, h2 {
 }
 
 h3 {
-    font-family: Roboto, sans-serif;
-    color: #3a3a3a;
+    font-weight: 900;
+    text-decoration: underline;
+    color: black;
     text-align: left;
     clear: both;
-    height: 2px;
     margin-left: 20px;
     margin-top: 20px;
     margin-bottom: 30px;
 }
 
 h4 {
-    font-size: medium;
-    font-family: Roboto, sans-serif;
-    color: #3a3a3a;
+    
+    color: black;
+    font-weight: 900;
+    text-decoration: underline;
 }
 
 h5 {
@@ -45,7 +46,7 @@ h5 {
 }
 
 p { 
-    font-family: Noto Sans, sans-serif;
+    font-family: Noto-Sans, sans-serif;
     text-align: center;
     padding: 10px;
     margin-top: 20px;
@@ -243,8 +244,9 @@ textarea {
     text-align: center;
     text-transform: uppercase;
     text-decoration: underline;
-    margin-left: 20px;
     font-weight: bold;
+    margin-left: 20px;
+    
     
 }
 
