--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,7 @@ iframe {
         display: block;
         font-size: 100%;
         margin: 0;
-        padding: 0;
+        padding: 5px;
     }
     
     #main-page-response {
