--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,12 @@ h4 {
     text-decoration: underline;
 }
 
-h5 {
-    font-family: Roboto, sans-serif;
+h5, h6 {  font-family: Roboto, sans-serif;
     color: #3a3a3a;
     font-size: medium;
     margin-left: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 p { 
@@ -418,7 +418,7 @@ iframe {
         .check-in-page {
             height: 800px;
             color: rgb(2,0,36);
-            width: 70%;
+            width: 80%;
             margin: 0 auto;
             background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
             border-radius: 7px;
@@ -556,7 +556,7 @@ iframe {
     .check-in-page {
         height: 850px;
         color: rgb(2,0,36);
-        width: 60%;
+        width: 70%;
         margin: 0 auto;
         background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
         border-radius: 7px;
@@ -687,6 +687,16 @@ iframe {
         margin: 0 auto;
         width: 100%;
         padding: 2px 10px; 
+    }
+    textarea {
+        display: block;
+        margin: 0 auto;
+        padding: 15px 5px;
+        width: 70%;
+        height: 30%;
+        background: transparent;
+        border: 1px solid #3a3a3a;
+        border-radius: 7px;
     }
 }
 
