--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ li {
 img {
     width: 20%;
     height: 300px;
-    padding: 10px 90px;
+    padding: 10px 80px;
     display: inline;   
 }
 
@@ -395,6 +395,24 @@ iframe {
     }
 }
 
+/* media query for screens at 1219px or larger */
+
+@media screen and (max-width: 1219px) {
+    img {
+        height: 200px;
+        width: 20%;
+        padding: 0;
+        margin-left: 10%;
+        margin-top: 10px;
+        display: inline;
+    }
+
+    #main-page-response {
+        height: 1000px;
+        width: 100%;
+    }
+}
+
 /* media query for screens at 992px or larger */
 
 @media screen and (max-width: 992px) {
@@ -454,7 +472,7 @@ iframe {
 
         /* styling the container for the index.html sections */
         #main-page-response {
-            height: 1800px;
+            height: 900px;
             width: 100%;
         }
     }
@@ -471,7 +489,7 @@ iframe {
     /* styling the container for the index.html sections */
     #main-page-response {
         width:100%;
-        height: 2000px;
+        height: 1250px;
         margin: 0 auto;
 
     }
@@ -516,8 +534,8 @@ iframe {
         margin-top: 10px;
         height: 750px;
         width: 100%;
-        background-size: 100% 100%;
-        background-position: cover no-repeat;
+        background-size: cover;
+        background-repeat: no-repeat;
         display:inline-block;
     }
 
@@ -650,7 +668,7 @@ iframe {
     img {
         height: 150px;
         width: 20%;
-        margin-left: 30px;
+        margin-left: 10%;
         display: inline;
     }
 
